docs: updated my details

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raj-Thombare-Site</title>
+    <title>Raj-Thombare-dotCom</title>
 </head>
 <body>
-    hey!! I'm Raj Thombare!
+    Hola!! I'm Raj Thombare!
+    It's my personal portfolio in making.
+    I'm a Computer Science student at Chatrapati Shivaji Maharaj University, Shedung-Panvel.
+    currently i am in the 2nd year and has learnt alot in these 1 and 1/2 year.
+    apart from coding and developing websites my hobbies are:
+    1. Travelling
+    2. Listening to Music
+    3. Sports (especially Cricket)
+    4. Games
 </body>
 </html>
