docs: updated details

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     2. Listening to Music
     3. Sports (especially Cricket)
     4. Games
+
+    I have watched a series called '13 years why?' on Netflix which was the best ever series i had watched so far!!
 </body>
 </html>
