added : my dream

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     4. Games
 
     I have watched a series called '13 years why?' on Netflix which was the best ever series i had watched so far!!
+
+    My dream is to study in Australia, do job their and get settle-down there!
+    having a job in Foreign country specially in Australia is kind of a tough challenge but having said that i just need to focus on my basics, do hardwork cause someone has told me that there is no substitution for hardwork which i think is the best motivational quote as it is always in my mind!
 </body>
 </html>
