--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raj-Thombare-dotCom</title>
+    <title>Raj-Thombare-DotCom</title>
 </head>
 <body>
     Hola!! I'm Raj Thombare!
