docs : added about projects

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
 
     My dream is to study in Australia, do job their and get settle-down there!
     having a job in Foreign country specially in Australia is kind of a tough challenge but having said that i just need to focus on my basics, do hardwork cause someone has told me that there is no substitution for hardwork which i think is the best motivational quote as it is always in my mind!
+
+    <h3>Projects</h3>
+    <p>So, i will post my projects tomorrow!</p>
 </body>
 </html>
