--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
 
     <h3>Projects</h3>
     <p>So, i will post my projects tomorrow!</p>
+
+    Hobbies - To watch Movies, To travel entire india for now and then to travel internationaly.
 </body>
 </html>
